--- a/package.json
+++ b/package.json
@@ -9,10 +9,49 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/inter": "^0.2.3",
+    "@expo-google-fonts/open-sans": "^0.2.3",
+    "@expo-google-fonts/source-sans-3": "^0.2.3",
+    "@pchmn/expo-material3-theme": "^1.3.2",
+    "@react-native-community/datetimepicker": "8.2.0",
+    "@react-native-community/netinfo": "11.4.1",
+    "@react-native-picker/picker": "2.9.0",
+    "@react-navigation/bottom-tabs": "^7.2.0",
+    "@react-navigation/drawer": "^7.1.1",
+    "@react-navigation/elements": "^2.2.5",
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/native-stack": "^7.2.0",
+    "@reduxjs/toolkit": "^2.5.1",
+    "@sentry/react-native": "~6.3.0",
+    "@shopify/flash-list": "1.7.1",
+    "axios": "^1.7.9",
     "expo": "~52.0.31",
+    "expo-app-loading": "^2.1.1",
+    "expo-constants": "~17.0.5",
+    "expo-dev-client": "~5.0.11",
+    "expo-device": "~7.0.2",
+    "expo-font": "~13.0.3",
+    "expo-image-picker": "~16.0.5",
+    "expo-linear-gradient": "~14.0.2",
+    "expo-location": "~18.0.5",
+    "expo-network": "~7.0.5",
+    "expo-notifications": "~0.29.13",
+    "expo-secure-store": "~14.0.1",
+    "expo-sharing": "~13.0.1",
+    "expo-splash-screen": "~0.29.21",
     "expo-status-bar": "~2.0.1",
+    "formik": "^2.4.6",
     "react": "18.3.1",
-    "react-native": "0.76.7"
+    "react-native": "0.76.7",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-paper": "^5.13.1",
+    "react-native-reanimated": "^3.16.7",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-vector-icons": "^10.2.0",
+    "react-redux": "^9.2.0",
+    "redux": "^5.0.1",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
