--- a/package.json
+++ b/package.json
@@ -43,10 +43,12 @@
     "expo-splash-screen": "~0.29.21",
     "expo-status-bar": "~2.0.1",
     "formik": "^2.4.6",
+    "lottie-react-native": "7.1.0",
     "react": "18.3.1",
     "react-native": "0.76.7",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-paper": "^5.13.1",
+    "react-native-progress": "^5.0.1",
     "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
