--- a/package.json
+++ b/package.json
@@ -43,23 +43,31 @@
     "expo-splash-screen": "~0.29.21",
     "expo-status-bar": "~2.0.1",
     "formik": "^2.4.6",
+    "lodash.debounce": "^4.0.8",
     "lottie-react-native": "7.1.0",
+    "moment": "^2.30.1",
     "react": "18.3.1",
     "react-native": "0.76.7",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-image-viewing": "^0.2.2",
     "react-native-paper": "^5.13.1",
     "react-native-progress": "^5.0.1",
     "react-native-reanimated": "^3.16.7",
+    "react-native-reanimated-carousel": "^4.0.2",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-vector-icons": "^10.2.0",
     "react-redux": "^9.2.0",
     "redux": "^5.0.1",
-    "yup": "^1.6.1"
+    "yup": "^1.6.1",
+    "expo-asset": "~11.0.5",
+    "expo-file-system": "~18.0.12"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@types/lodash.debounce": "^4.0.9",
     "@types/react": "~18.3.12",
+    "@types/react-native-image-gallery": "^2.1.5",
     "@types/react-native-vector-icons": "^6.4.18",
     "typescript": "^5.3.3"
   },
