--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "axios": "^1.7.9",
     "expo": "~52.0.31",
     "expo-app-loading": "^2.1.1",
+    "expo-asset": "~11.0.5",
     "expo-constants": "~17.0.5",
     "expo-dev-client": "~5.0.11",
     "expo-device": "~7.0.2",
+    "expo-file-system": "~18.0.12",
     "expo-font": "~13.0.3",
     "expo-image-manipulator": "~13.0.6",
     "expo-image-picker": "~16.0.5",
@@ -48,6 +50,7 @@
     "moment": "^2.30.1",
     "react": "18.3.1",
     "react-native": "0.76.7",
+    "react-native-flexible-grid": "^0.2.3",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-image-viewing": "^0.2.2",
     "react-native-paper": "^5.13.1",
@@ -59,9 +62,7 @@
     "react-native-vector-icons": "^10.2.0",
     "react-redux": "^9.2.0",
     "redux": "^5.0.1",
-    "yup": "^1.6.1",
-    "expo-asset": "~11.0.5",
-    "expo-file-system": "~18.0.12"
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
