--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "@expo-google-fonts/inter": "^0.2.3",
     "@expo-google-fonts/open-sans": "^0.2.3",
     "@expo-google-fonts/source-sans-3": "^0.2.3",
+    "@expo/config-plugins": "~9.0.0",
+    "@expo/prebuild-config": "~8.0.0",
+    "@expo/react-native-action-sheet": "^4.1.1",
     "@pchmn/expo-material3-theme": "^1.3.2",
+    "@react-native-clipboard/clipboard": "^1.16.2",
     "@react-native-community/datetimepicker": "8.2.0",
     "@react-native-community/netinfo": "11.4.1",
     "@react-native-picker/picker": "^2.9.0",
@@ -23,43 +27,49 @@
     "@react-navigation/native-stack": "^7.2.0",
     "@reduxjs/toolkit": "^2.5.1",
     "@sentry/react-native": "~6.3.0",
-    "@shopify/flash-list": "1.7.1",
+    "@shopify/flash-list": "1.7.3",
     "apisauce": "^3.1.0",
     "axios": "^1.7.9",
-    "expo": "~52.0.31",
-    "expo-app-loading": "^2.1.1",
+    "dayjs": "^1.11.13",
+    "expo": "~52.0.42",
     "expo-asset": "~11.0.5",
+    "expo-av": "~15.0.2",
     "expo-constants": "~17.0.5",
-    "expo-dev-client": "~5.0.11",
-    "expo-device": "~7.0.2",
+    "expo-dev-client": "~5.0.19",
+    "expo-device": "~7.0.3",
     "expo-file-system": "~18.0.12",
     "expo-font": "~13.0.3",
     "expo-image-manipulator": "~13.0.6",
-    "expo-image-picker": "~16.0.5",
+    "expo-image-picker": "~16.0.6",
     "expo-linear-gradient": "~14.0.2",
-    "expo-location": "~18.0.5",
+    "expo-location": "~18.0.10",
     "expo-network": "~7.0.5",
-    "expo-notifications": "~0.29.13",
+    "expo-notifications": "~0.29.14",
     "expo-secure-store": "~14.0.1",
     "expo-sharing": "~13.0.1",
-    "expo-splash-screen": "~0.29.21",
+    "expo-splash-screen": "~0.29.22",
     "expo-status-bar": "~2.0.1",
     "formik": "^2.4.6",
     "lodash.debounce": "^4.0.8",
     "lottie-react-native": "7.1.0",
-    "moment": "^2.30.1",
+    "nanoid": "^5.1.5",
     "react": "18.3.1",
-    "react-native": "0.76.7",
+    "react-native": "0.76.9",
+    "react-native-audio-recorder-player": "^3.6.12",
     "react-native-flexible-grid": "^0.2.3",
     "react-native-gesture-handler": "~2.20.2",
-    "react-native-image-viewing": "^0.2.2",
+    "react-native-get-random-values": "^1.11.0",
+    "react-native-gifted-chat": "^2.4.0",
+    "react-native-keyboard-controller": "^1.16.8",
+    "react-native-modal": "^14.0.0-rc.1",
     "react-native-paper": "^5.13.1",
     "react-native-progress": "^5.0.1",
-    "react-native-reanimated": "^3.16.7",
+    "react-native-reanimated": "~3.16.1",
     "react-native-reanimated-carousel": "^4.0.2",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-stock-star-rating": "^1.0.6",
+    "react-native-uuid": "^2.0.3",
     "react-native-vector-icons": "^10.2.0",
     "react-redux": "^9.2.0",
     "redux": "^5.0.1",
@@ -72,6 +82,22 @@
     "@types/react-native-image-gallery": "^2.1.5",
     "@types/react-native-vector-icons": "^6.4.18",
     "typescript": "^5.3.3"
+  },
+  "expo": {
+    "doctor": {
+      "reactNativeDirectoryCheck": {
+        "exclude": [
+          "expo-app-loading",
+          "moment",
+          "nanoid",
+          "lodash.debounce",
+          "@pchmn/expo-material3-theme",
+          "react-native-stock-star-rating",
+          "yup"
+        ],
+        "listUnknownPackages": false
+      }
+    }
   },
   "private": true
 }
