--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "@react-native-clipboard/clipboard": "^1.16.2",
     "@react-native-community/datetimepicker": "8.2.0",
     "@react-native-community/netinfo": "11.4.1",
-    "@react-native-community/slider": "^4.5.6",
     "@react-native-picker/picker": "^2.9.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/drawer": "^7.1.1",
@@ -40,6 +39,7 @@
     "expo-device": "~7.0.3",
     "expo-file-system": "~18.0.12",
     "expo-font": "~13.0.3",
+    "expo-haptics": "^14.0.1",
     "expo-image-manipulator": "~13.0.6",
     "expo-image-picker": "~16.0.6",
     "expo-linear-gradient": "~14.0.2",
